--- a/styles/base/theme.css
+++ b/styles/base/theme.css
@@ -6,9 +6,9 @@
   --color-primary-700: hsl(215, 100%, 35%);
 
   /* Secondary */
-  --color-secondary-200: hsl(153, 72%, 90%);
-  --color-secondary-400: hsl(162, 71%, 60%);
-  --color-secondary-700: hsl(161, 100%, 27%);
+  --color-secondary-200: hsl(153, 48%, 36%);
+  --color-secondary-400: hsl(162, 57%, 24%);
+  --color-secondary-700: hsl(162, 66%, 12%);
 
   /* Accent */
   --color-accent-200: hsl(27, 92%, 90%);
@@ -51,13 +51,17 @@
   --text-lg: clamp(1.25rem, 1rem + 1vw, 1.75rem);
   --text-lg--line-height: 1.375;
 
-  /* XL: headings min 24px, max ~40px*/
+  /* XL: min 24px, max ~40px*/
   --text-xl: clamp(1.5rem, 1.25rem + 1.5vw, 2.5rem);
   --text-xl--line-height: 1.375;
 
-  /* 2XL: for hero text etc. min 32px, max ~56px */
+  /* 2XL: min 32px, max ~56px */
   --text-2xl: clamp(2rem, 1.5rem + 2vw, 3.5rem);
   --text-2xl--line-height: 1.25;
+
+  /* 3XL: min 40px, max ~80px */
+  --text-3xl: clamp(2.5rem, 2rem + 2vw, 5rem);
+  --text-3xl--line-height: 1.15;
 
   /* Font Weights */
   --font-weight-light: 300;
