--- a/styles/components/index.css
+++ b/styles/components/index.css
@@ -2,6 +2,8 @@
 @import './buttons.switch.css';
 @import './buttons.icons.css';
 @import './buttons.toggle.css';
-
+/* links */
+@import './links.button.css';
 /* custom component */
 @import './accordion.css';
+@import './embla.css';
