--- a/styles/components/embla.css
+++ b/styles/components/embla.css
@@ -3,13 +3,24 @@
   margin: auto;
   --slide-height: 10rem;
   --slide-spacing: 0.5rem;
-  --slide-size: 33%;
+  --slide-size: 40%;
 }
+
 @media screen and (min-width: 768px ) {
     .embla {
-        --slide-size: 30%;
+        --slide-size: 15rem;
+        --slide-height: 15rem;
+        --slide-spacing: 1rem;
     }
 }
+
+@media screen and (min-width: 948px ) {
+    .embla {
+        --slide-size: 12.5rem;
+        --slide-height: 12.5rem;
+
+    }
+  }
 .embla__viewport {
   overflow: hidden;
   padding-block: calc(var(--spacing) * 4);
@@ -22,12 +33,18 @@
 .embla__slide {
   transform: translate3d(0, 0, 0);
   flex: 0 0 var(--slide-size);
-  min-width: 0;
-  padding-left: var(--slide-spacing);
+  min-width: 150px;
+  padding: calc(var(--slide-spacing) / 2);
+  border-radius: 24px;
 }
+.embla__slide--selected {
+  outline: 3px dashed var(--color-dark-40);
+  outline-style: ridge;
+}
+
 .embla__slide__content {
-  box-shadow: inset 0 0 0 0.2rem var(--color-dark);
-  border-radius: 1.8rem;
+  box-shadow: rgba(0, 0, 0, 0.25) -2px -3px 6px 1px inset;
+  border-radius: 28px;
   font-size: 4rem;
   font-weight: 600;
   display: flex;
@@ -35,20 +52,24 @@
   justify-content: center;
   height: var(--slide-height);
   user-select: none;
+  transition: transform 300ms ease-in-out;
+  &:hover {
+    transform: scale(1.02);
+  }
 }
-.embla__controls {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  justify-content: space-between;
-  gap: 1.2rem;
-  margin-top: 1.8rem;
-}
+
 .embla__buttons {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  margin-top: 0.1rem;
+  display: flex;
   gap: 0.6rem;
+  justify-content: space-between;
   align-items: center;
+  width: 100%;
+  @media screen and (min-width: 40rem ) {
+    width: fit-content;
+  }
 }
+
 .embla__button {
   -webkit-tap-highlight-color: rgba(var(--color-dark), 0.5);
   -webkit-appearance: none;
