--- a/styles/components/embla.css
+++ b/styles/components/embla.css
@@ -36,14 +36,14 @@
   min-width: 150px;
   padding: calc(var(--slide-spacing) / 2);
   border-radius: 24px;
+  opacity: 0.5;
+  transition: opacity 500ms ease-in-out;
 }
 .embla__slide--selected {
-  outline: 3px dashed var(--color-dark-40);
-  outline-style: ridge;
+  opacity: 1;
 }
 
 .embla__slide__content {
-  box-shadow: rgba(0, 0, 0, 0.25) -2px -3px 6px 1px inset;
   border-radius: 28px;
   font-size: 4rem;
   font-weight: 600;
