--- a/styles/components/links.social.css
+++ b/styles/components/links.social.css
@@ -7,6 +7,11 @@
     width: clamp(52px, 100%, 82px);
     display: grid;
     place-content: center;
+    background-color: var(--color-light);
+
+    & svg {
+        fill: var(--color-primary-200);    
+    }
 
     &:hover {
         border-color: var(--color-primary-700);
