UPDATE use font from main site and add alt organize public assets

--- a/styles/base/theme.css
+++ b/styles/base/theme.css
@@ -69,12 +69,10 @@
   /* Font Weights */
   --font-weight-light: 300;
   --font-weight-normal: 400;
-  --font-weight-medium: 500;
-  --font-weight-semibold: 600;
-  --font-weight-bold: 700;
+  --font-weight-bold: 600;
 
   --font-sans: var(--font-main);
-  --font-accent: "Concert One", "Concert One Fallback";
+  --font-accent: var(--font-main);
 
 }
 
