--- a/styles/base/links.css
+++ b/styles/base/links.css
@@ -1,13 +1,14 @@
 .link {
     height: fit-content;
-    color: var(--color-light);
+    color: var(--color-white);
     text-decoration: underline;
     cursor: pointer;
+    width: fit-content;
 
     &:hover {}
 
     &:focus-visible {
-        outline: 1px dashed var(--color-light);
+        outline: 1px dashed var(--color-white);
         outline-offset: 2px;
     }
 }
